made a changes of commenting and uncommenting

--- a/loginWithCookies/checkUserNameAndPassWord.html
+++ b/loginWithCookies/checkUserNameAndPassWord.html
@@ -45,9 +45,9 @@
                 console.log(username+' ' + ' '+password);
                 let userExists = document.getElementById('userExists');                    
                 let userDoesNotExists = document.getElementById('userDoesNotExists');
-                let userName = printUserName(username, password);
+                let personName = printUserName(username, password);
                 if(isValidData) {
-                    window.open('http://127.0.0.1:5500/Revision/homePage.html?name=' + userName,'_self');
+                    window.open('http://127.0.0.1:5500/loginWithCookies/homePage.html?name=' + personName,'_self');
                 } else {
                     userExists.style.display = 'none';
                     userDoesNotExists.style.display = 'block';
