--- a/loginWithCookies/checkUserNameAndPassWord.html
+++ b/loginWithCookies/checkUserNameAndPassWord.html
@@ -47,11 +47,12 @@
                 let userDoesNotExists = document.getElementById('userDoesNotExists');
                 let personName = printUserName(username, password);
                 if(isValidData) {
-                    window.open('http://127.0.0.1:5500/loginWithCookies/homePage.html?name=' + personName,'_self');
+                    // window.open('http://127.0.0.1:5500/loginWithCookies/homePage.html?name=' + personName,'_self');
                 } else {
                     userExists.style.display = 'none';
                     userDoesNotExists.style.display = 'block';
                 }
+                console.log(this);
             }
 
             // function togglePassword() {
@@ -66,6 +67,7 @@
             document.cookie = 'age=35';
             document.cookie = 'gender=male';
             document.cookie = 'name=ananthareddy';
+            console.log(this);
  
 
         </script>
